# files-to-prompt-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: cli-test.rs  cli-tests.rs  cli.rs  helpers.rs
tests/golden/: 01_basic.golden.txt  02_multiple_folders.golden.txt  03_gitignore.golden.txt  04_invalid_utf8.golden.txt  05_hidden.golden.txt  05a_include_hidden.golden.txt  06_ignore.golden.txt  07_ignore_gitignore.golden.txt  08_line_numbers.golden.txt  10_cxml.golden.txt  11_markdown.golden.txt  13_json.golden.txt  15_extensions.golden.txt
tests/helpers/: mod.rs
tests/inputs/: reverse.txt
tests/inputs/03_gitignore/: file1.txt
tests/inputs/11_markdown/: sample.html  sample.sh  sample.xml  sample.yaml  sample.yml
