[package]
name = "files-to-prompt"
version = "1.0.3"
edition = "2021"
authors = ["Anish Karandikar <anishkny@gmail.com>"]
description = "Concatenates a directory full of files into a single prompt for use with LLMs"
license = "MIT"
repository = "https://github.com/anishkny/files-to-prompt-rust"
keywords = ["llm", "prompt", "concatenation", "files", "recursive"]
categories = ["command-line-utilities", "filesystem"]
exclude = [".github"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
globset = "0.4.17"
ignore = "0.4.23"
tempfile = "3.23.0"

[dev-dependencies]
goldenfile = "1.9.1"
test-case = "3.3.1"
